# py-ja-automation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
sim_dev/: __init__.py  __main__.py  cli.py  config.py  exception.py  file.py
sim_dev/static/: logo.txt
tests/: test_app.py
