[tool.poetry]
name = "sim-dev"
version = "0.1.0"
description = ""
authors = ["Philippe Ivan Mbarga <pmbarga@simco.fr>"]
readme = "README.md"
packages = [{include = "sim_dev"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
colorama = "^0.4.6"
shellingham = "^1.5.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
